syntax = "proto3";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

package swapi.v1;
option go_package = "proto";

service Starwars {
  rpc GetFilm(GetFilmRequest) returns (GetFilmResponse) {
    option (google.api.http) = {
      get: "/swapi/v1/films/{id}"
    };
  }

  rpc ListFilms(ListFilmsRequest) returns (ListFilmsResponse) {
    option (google.api.http) = {
      get: "/swapi/v1/films"
    };
  }

  rpc GetVehicle(GetVehicleRequest) returns (GetVehicleResponse) {
    option (google.api.http) = {
       get: "/swapi/v1/vehicles/{id}"
    };
  }

  rpc ListVehicles(ListVehiclesRequest) returns (ListVehiclesResponse) {
    option (google.api.http) = {
       get: "/swapi/v1/vehicles"
    };
  }

  rpc GetStarship(GetStarshipRequest) returns (GetStarshipResponse) {
    option (google.api.http) = {
       get: "/swapi/v1/starships/{id}"
    };
  }

  rpc ListStarships(ListStarshipsRequest) returns (ListStarshipsResponse) {
    option (google.api.http) = {
       get: "/swapi/v1/starships"
    };
  }

  rpc GetSpecies(GetSpeciesRequest) returns (GetSpeciesResponse) {
    option (google.api.http) = {
       get: "/swapi/v1/species/{id}"
    };
  }

  rpc ListSpecies(ListSpeciesRequest) returns (ListSpeciesResponse) {
    option (google.api.http) = {
       get: "/swapi/v1/species"
    };
  }

  rpc GetPlanet(GetPlanetRequest) returns (GetPlanetResponse) {
    option (google.api.http) = {
       get: "/swapi/v1/planets/{id}"
    };
  }

  rpc ListPlanets(ListPlanetsRequest) returns (ListPlanetsResponse) {
    option (google.api.http) = {
       get: "/swapi/v1/planets"
    };
  }

  rpc GetPerson(GetPersonRequest) returns (GetPersonResponse) {
    option (google.api.http) = {
       get: "/swapi/v1/people/{id}"
    };
  }

  rpc ListPeople(ListPeopleRequest) returns (ListPeopleResponse) {
    option (google.api.http) = {
       get: "/swapi/v1/people"
    };
  }

  rpc ListStarshipActions(google.protobuf.Empty) returns (stream StarshipAction) {}
}

message Film {
  string title = 1;
  int32 episode_id = 2;
  string opening_crawl = 3;
  string director = 4;
  string producer = 5;
  string release_date = 6;
  repeated string characters = 7;
  repeated string planets = 8;
  repeated string starships = 9;
  repeated string vehicles = 10;
  repeated string species = 11;
  string id = 12;
}

message GetFilmRequest {
  string id = 1;
}

message GetFilmResponse {
  Film film = 1;
}

message ListFilmsRequest {
}

message ListFilmsResponse {
  repeated Film films = 1;
}

message Vehicle {
  string name = 1;
  string model = 2;
  string manufacturer = 3;
  int32 cost_in_credits = 4;
  float length = 5;
  int32 max_atmosphering_speed = 6;
  int32 crew = 7;
  int32 passengers = 8;
  int32 cargo_capacity = 9;
  string consumables = 10;
  string vehicle_class = 11;
  repeated string pilots = 12;
  repeated string films = 13;
  string id = 14;
}

message GetVehicleRequest {
  string id = 1;
}

message GetVehicleResponse {
  Vehicle vehicle = 1;
}

message ListVehiclesRequest {
}

message ListVehiclesResponse {
  repeated Vehicle vehicles = 1;
}

message Starship {
  string name = 1;
  string model = 2;
  string manufacturer = 3;
  int64 cost_in_credits = 4;
  float length = 5;
  int32 crew = 6;
  int32 passengers = 7;
  int64 cargo_capacity = 8;
  string consumables = 9;
  float hyperdrive_rating = 10;
  int32 mglt = 11;
  string starship_class = 12;
  repeated string pilots = 13;
  repeated string films = 14;
  string id = 15;
  int64 max_atmosphering_speed = 16;
}

message GetStarshipRequest {
  string id = 1;
}

message GetStarshipResponse {
  Starship starship = 1;
}

message ListStarshipsRequest {
}

message ListStarshipsResponse {
  repeated Starship starships = 1;
}

message Species {
  string name = 1;
  string classification = 2;
  string designation = 3;
  int32 average_height = 4;
  string skin_colors = 5;
  string eye_colors = 6;
  int32 average_lifespan = 7;
  string homeworld = 8;
  string language = 9;
  repeated string people = 10;
  repeated string films = 11;
  string id = 12;
  string hair_colors = 13;
}

message GetSpeciesRequest {
  string id = 1;
}

message GetSpeciesResponse {
  Species species = 1;
}

message ListSpeciesRequest {
}

message ListSpeciesResponse {
  repeated Species species = 1;
}

message Planet {
  string name = 1;
  int32 rotation_period = 2;
  int32 orbital_period = 3;
  int32 diameter = 4;
  string climate = 5;
  float gravity = 6;
  string terrain = 7;
  float surface_water = 8;
  int64 population = 9;
  repeated string residents = 10;
  repeated string films = 11;
  string id = 12;
}

message GetPlanetRequest {
  string id = 1;
}

message GetPlanetResponse {
  Planet planet = 1;
}

message ListPlanetsRequest {
}

message ListPlanetsResponse {
  repeated Planet planets = 1;
}

message Person {
  string name = 1;
  int32 height = 2;
  float mass = 3;
  string hair_color = 4;
  string skin_color = 5;
  string eye_color = 6;
  string birth_year = 7;
  string gender = 8;
  string homeworld = 9;
  repeated string films = 10;
  repeated string species = 11;
  repeated string vehicles = 12;
  repeated string starships = 13;
  string id = 14;
}

message GetPersonRequest {
  string id = 1;
}

message GetPersonResponse {
  Person person = 1;
}

message ListPeopleRequest {
}

message ListPeopleResponse {
  repeated Person people = 1;
}

message StarshipAction {
  Starship starship = 1;
  enum Action {
    TOOKOFF = 0;
    LANDED = 1;
    HYPERDRIVE = 2;
    HIDING_IN_A_MOUTH = 3;
  }
  
  Action action = 2;
}
